syntax = "proto2";

package protos.soc;

message Hex {
    enum Resource {
        BRICK = 0;
        ORE = 1;
        SHEEP = 2;
        WHEAT = 3;
        WOOD = 4;
        DESERT = 5;
    }
    message HexProbability {
        required int32 number = 1;
        required int32 dots = 2;
    }
    required string id = 1;
    required Resource resource = 2;
    optional HexProbability hex_probability = 3;
    repeated Vertex adjacent_vertices = 4;
}

message Vertex {
    required string id = 1;
}

message Edge {
    required Vertex v1 = 1;
    required Vertex v2 = 2;
}

message Port {
    enum PortType {
        BRICK = 0;
        ORE = 1;
        SHEEP = 2;
        WHEAT = 3;
        WOOD = 4;
        MISC = 5;
    }
    required PortType port_type = 1;
    required Edge edge = 2;
}

message VertexBuilding {
    enum BuildingType {
        SETTLEMENT = 0;
        CITY = 1;
    }
    required BuildingType building_type = 1;
    required Vertex vertex = 2;
    required int32 player_position = 3;
}

message EdgeBuilding {
    enum BuildingType {
        ROAD = 0;
    }
    required BuildingType building_type = 1;
    required Edge edge = 2;
    required int32 player_position = 3;
}

message Board {
    repeated Hex hexes = 1;
    repeated Port ports = 2;
    required Hex robber_hex = 3;
    repeated VertexBuilding vertex_buildings = 4;
    repeated EdgeBuilding edge_buildings = 5;
}